# Robot_ros2_projekt

./: README.md
my_robot_controller/: CMakeLists.txt  package.xml
my_robot_controller/src/: navigation_node.cpp
my_robot_sim/: CMakeLists.txt  package.xml
my_robot_sim/urdf/: my_robot.urdf
